--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="nav">
 				<h1>Dale</h1>
 				<ul>
-					<li><a href="#home" id="a1">homesajdfhs</a></li>
+					<li><a href="#home" id="a1">home</a></li>
 					<li><a href="#about" id="a2">about</a></li>
 					<li><a href="#service" id="a3">service</a></li>
 					<li><a href="#experience" id="a4">experience</a></li>
