--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				z-index: 100;
 				max-width: 1820px;
 				width: 100%;
-				height: 3500px;
+				height: 860px;
 			}
 		</style>
 	</head>
@@ -117,7 +117,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<!-- first -->
-				<div class="bg-yellow col-md-3 col-sm-6 top">
+				<div class="bg-yellow col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="0.8s">
 						<i class="fa fa-desktop"></i>
 						<h3>Interface Design</h3>
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 				<!-- second -->
-				<div class="bg-orange col-md-3 col-sm-6 top">
+				<div class="bg-orange col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.2s">
 						<i class="fa fa-paper-plane"></i>
 						<h3>Media Strategy</h3>
@@ -133,7 +133,7 @@
 					</div>
 				</div>
 				<!-- third -->
-				<div class="bg-dark col-md-3 col-sm-6 top">
+				<div class="bg-dark col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.6s">
 						<i class="fa fa-table"></i>
 						<h3>Mobile App</h3>
@@ -141,7 +141,7 @@
 					</div>
 				</div>
 				<!-- fourth -->
-				<div class="col-md-3 col-sm-6 top">
+				<div class="col-md-3 col-sm-6">
 					<div class="wow fadeInUp service-thumb" data-wow-delay="1.8s">
 						<i class="fa fa-html5"></i>
 						<h3>Coding</h3>
@@ -159,7 +159,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="background-image experience-img"></div>
 			</div>
-			<div class=" bg-orange col-md-6 col-sm-6 top">
+			<div class=" bg-orange col-md-6 col-sm-6">
 				<div class="color-white experience-thumb">
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
 						<h1>My Experiences</h1>
@@ -192,7 +192,7 @@
 <div class="education" id="education">
 	<div class="container-fluid">
 		<div class="row">
-			<div class=" bg-yellow col-md-6 col-sm-6 top">
+			<div class=" bg-yellow col-md-6 col-sm-6">
 				<div class="education-thumb">
 					<!-- first -->
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
@@ -232,7 +232,7 @@
 	<div class="overlay"></div>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-offset-1 col-md-10 col-sm-12 top">
+			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<i class="wow fadeInUp fa fa-star"></i>
 				<h2 class="wow fadeInUp">Proin lobortis eu diam et facilisis. Fusce nisi nibh, molestie in vestibulum quis, auctor et orci.</h2>
 				<p class="wow fadeInUp">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu, iaculis congue sem.</p>
@@ -247,7 +247,7 @@
 			<div class="col-md-6 col-sm-6">
 				<div class="background-image contact-img"></div>
 			</div>
-			<div class="col-md-6 col-sm-6 top">
+			<div class="col-md-6 col-sm-6">
 				<div class="contact-thumb">
 					<div class="wow fadeInUp contact-info" data-wow-delay="0.6s">
 						<h1 class="color-white">我的地址</h1>
