--- a/02.html
+++ b/02.html
@@ -9,32 +9,19 @@
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="stylesheet" href="css/app02.css">
-		<style>
-			body{
-				position: relative;
-			}
-			#particles-js{
-				position: absolute;
-				top: 0;
-				z-index: 100;
-				max-width: 1820px;
-				width: 100%;
-				height: 860px;
-			}
-		</style>
 	</head>
 	<body>
 		<div id="particles-js"></div>
 		<!-- 导航 -->
 		<div class="navbar">
 			<div class="nav">
-				<h1>Dale</h1>
+				<h1>YangDeZhi</h1>
 				<ul>
-					<li><a href="#home" id="a1">home</a></li>
-					<li><a href="#about" id="a2">about</a></li>
-					<li><a href="#service" id="a3">service</a></li>
-					<li><a href="#experience" id="a4">experience</a></li>
-					<li><a href="#education" id="a5">education</a></li>
+					<li><a href="#home" id="a1">主页</a></li>
+					<li><a href="#about" id="a2">关于</a></li>
+					<li><a href="#service" id="a3">经历</a></li>
+					<li><a href="#education" id="a4">个人总结</a></li>
+					<li><a href="#contact" id="a5">联系方式</a></li>
 				</ul>
 			</div>
 		</div>
@@ -44,15 +31,16 @@
 				<div class="row">
 					<!-- 特效 -->
 					<!-- end -->
-					<div class="col-md-6 col-sm-6">
+					<div class="col-md-6 col-sm-12">
+						<!-- <div class="overlay"></div> -->
 						<div class="home-img"></div>
 					</div>
-					<div class="col-md-6 col-sm-6 top">
-						<div class="home-thumb">
-							<div class="section-title">
+					<div class="col-md-6 col-sm-12 ">
+						<div class="home-thumb ">
+							<div class="section-title top">
 								<h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
-								<h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Dale</strong> currently based in New York city.</h1>
-								<p class="wow fadeInUp" data-wow-delay="0.9s">Donec auctor arcu at efficitur lacinia. Praesent bibendum efficitur ipsum, et mattis tellus interdum in. Ut a dictum purus. Vestibulum non pellentesque felis, sed dignissim urna. Vestibulum id accumsan quam.</p>
+								<h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>YangDeZhi</strong>湖北-武汉</h1>
+								<p class="wow fadeInUp" data-wow-delay="0.9s">独学而无友 则孤陋而寡闻</p>
 								<a href="#about" class="a2 wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Get Started</a>
 							</div>
 						</div>
@@ -66,15 +54,19 @@
 		<div class="container-fluid">
 			<div class="row">
 				<!-- first -->
-				<div class="col-md-6 col-sm-12 top">
+				<div class="col-md-6 col-sm-12">
 					<div class="about-thumb">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.4s">
-							<h1>Donec auctor</h1>
-							<p class="color-yellow">Sed vulputate vitae diam quis bibendum</p>
+							<h1>求职目标</h1>
+							<p class="color-yellow">Web前端开发工程师</p>
 						</div>
 						<div class="wow fadeInUp" data-wow-delay="0.8s">
-							<p>Phasellus vulputate tellus nec tortor varius elementum. Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu, iaculis congue sem. Mauris convallis eros massa.</p>
-							<p>Quisque viverra iaculis aliquam. Etiam volutpat, justo non aliquam bibendum, sem nibh mollis erat, quis porta odio odio at velit.</p>
+							<p>●熟练掌握HTML+CSS，熟悉普通网页制作等</p>
+							<p>●熟悉了解css的预编译语言Less、ES6语法以及Bootstrap等前端框架</p>
+							<p>●能够利用Ajax完成前后端数据通信</p></p>
+							<p>●熟悉使用JavaScript、JQuery、Angular.js、Vue.js、node.js</p>
+							<p>●了解JAVA，MySQL</p>
+							<!-- <p>Quisque viverra iaculis aliquam. Etiam volutpat, justo non aliquam bibendum, sem nibh mollis erat, quis porta odio odio at velit.</p> -->
 						</div>
 					</div>
 				</div>
@@ -86,24 +78,24 @@
 				<div class="bg-yellow col-md-3 col-sm-6">
 					<div class="skill-thumb">
 						<div class="wow fadeInUp section-title color-white" data-wow-delay="1.2s">
-							<h1>My Skills</h1>
-							<p class="color-white">Photoshop . HTML CSS JS . Web Design</p>
+							<h1>我的技能</h1>
+							<p class="color-white">ES6 . HTML CSS JS . Ajax. Angular. Node. vue.</p>
 						</div>
 						<div class=" wow fadeInUp skills-thumb" data-wow-delay="1.6s">
-							<strong>Frontend Design</strong>
-							<span class="color-white pull-right">90%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
-							</div>
-							<strong>Backend processing</strong>
-							<span class="color-white pull-right">70%</span>
-							<div class="progress">
-								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
-							</div>
 							<strong>HTML5 & CSS3</strong>
 							<span class="color-white pull-right">80%</span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+							</div>
+							<strong>JavaScript</strong>
+							<span class="color-white pull-right">60%</span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+							</div>
+							<strong>JQuery</strong>
+							<span class="color-white pull-right">60%</span>
+							<div class="progress">
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 							</div>
 						</div>
 					</div>
@@ -121,12 +113,12 @@
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="0.8s">
 						<i class="fa fa-desktop"></i>
 						<h3>Interface Design</h3>
-						<p class="color-white">Phasellus vulputate tellus nec tortor varius elementum. Curabitur at pulvinar ante.</p>
+						<p class="color-white">Phasellus vulputate tellus nec tortor varius elementum. Curabitur at pulvinar ante.Curabitur at pulvinar ante</p>
 					</div>
 				</div>
 				<!-- second -->
 				<div class="bg-orange col-md-3 col-sm-6">
-					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.2s">
+					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1s">
 						<i class="fa fa-paper-plane"></i>
 						<h3>Media Strategy</h3>
 						<p class="color-white">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu, iaculis congue sem.</p>
@@ -134,7 +126,7 @@
 				</div>
 				<!-- third -->
 				<div class="bg-dark col-md-3 col-sm-6">
-					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.6s">
+					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.2s">
 						<i class="fa fa-table"></i>
 						<h3>Mobile App</h3>
 						<p class="color-white">Mauris convallis eros massa, vitae euismod arcu tempus ut. Quisque viverra iaculis.</p>
@@ -142,7 +134,7 @@
 				</div>
 				<!-- fourth -->
 				<div class="col-md-3 col-sm-6">
-					<div class="wow fadeInUp service-thumb" data-wow-delay="1.8s">
+					<div class="wow fadeInUp service-thumb" data-wow-delay="1.4s">
 						<i class="fa fa-html5"></i>
 						<h3>Coding</h3>
 						<p>Mauris convallis eros massa, vitae euismod arcu tempus ut. Quisque viverra iaculis.</p>
@@ -162,16 +154,16 @@
 			<div class=" bg-orange col-md-6 col-sm-6">
 				<div class="color-white experience-thumb">
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
-						<h1>My Experiences</h1>
-						<p class="color-white">Previous companies and my tasks</p>
+						<h1>实习经验</h1>
+						<p class="color-white">EXPERIENCE</p>
 					</div>
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
 						<div class="media-object media-left">
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3 class="media-heading">Graphic Designer <small>2014 Jul - 2015 Sep</small></h3>
-							<p class="color-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+							<h3 class="media-heading">滁州跨境电商产业园门户网<small>2017.06-2017.09</small></h3>
+							<p class="color-white"><a href="http://www.czetrade.com">www.czetrade.com</a></p>
 						</div>
 					</div>
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
@@ -179,8 +171,8 @@
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3 class="media-heading">Web Designer <small>2015 Oct - 2017 Jan</small></h3>
-							<p class="color-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+							<h3 class="media-heading">滁州外贸网<small>2017.10-2017.12</small></h3>
+							<p class="color-white"><a href="http://www.chuzhouexports.com">www.chuzhouexports.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -196,8 +188,8 @@
 				<div class="education-thumb">
 					<!-- first -->
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
-						<h1>My Education</h1>
-						<p class="color-white">In cursus orci non ipsum gravida dignissim</p>
+						<h1>教育背景</h1>
+						<p class="color-white">EDUCATION</p>
 					</div>
 					<!-- second -->
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
@@ -205,20 +197,21 @@
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3 class="media-heading">Master in Design <small>2012 Jan - 2014 May</small></h3>
-							<p class="color-white">Etiam iaculis elit in mauris ullamcorper auctor. Proin a sapien id orci ullamcorper dignissim eu in neque.</p>
+							<h3 class="media-heading">time: <small>2015.06 - 2018.06</small></h3>
+							<h3 class="media-heading">school: <small>武汉科技大学城市学院</small></h3>
+							<h3 class="media-heading">major: <small>电子商务</small></h3>
 						</div>
 					</div>
 					<!-- third -->
-					<div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
-						<div class="media-object media-left">
-							<i class="fa fa-laptop"></i>
-						</div>
-						<div class="media-body">
-							<h3 class="media-heading">Bachelor of Arts <small>2008 May - 2011 Dec</small></h3>
-							<p class="color-white">Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-						</div>
-					</div>
+					<!-- <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
+							<div class="media-object media-left">
+									<i class="fa fa-laptop"></i>
+							</div>
+							<div class="media-body">
+									<h3 class="media-heading">Bachelor of Arts <small>2008 May - 2011 Dec</small></h3>
+									<p class="color-white">Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							</div>
+					</div> -->
 				</div>
 			</div>
 			<div class="col-md-6 col-sm-6">
@@ -234,8 +227,10 @@
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<i class="wow fadeInUp fa fa-star"></i>
-				<h2 class="wow fadeInUp">Proin lobortis eu diam et facilisis. Fusce nisi nibh, molestie in vestibulum quis, auctor et orci.</h2>
-				<p class="wow fadeInUp">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu, iaculis congue sem.</p>
+				<h2 class="wow fadeInUp">个人总结</h2>
+				<p class="wow fadeInUp">作为一个互联网从业者，不断的学习是必备的一项技能，我很喜欢前端工程师这个职业，通过系统性学习和自学
+					我更能认识到技术的日新月异和自我的不足，作为一个前端工程师，我们注重的不仅仅是技术的优秀，用户体验也是不可或缺的。
+				</p>
 			</div>
 		</div>
 	</div>
@@ -245,7 +240,9 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-6 col-sm-6">
-				<div class="background-image contact-img"></div>
+				<div class="background-image contact-img">
+					<div class="overlay01"></div>
+				</div>
 			</div>
 			<div class="col-md-6 col-sm-6">
 				<div class="contact-thumb">
@@ -256,8 +253,8 @@
 					<div class="wow fadeInUp contact-info" data-wow-delay="0.8s">
 						<h2 class="color-white">我的联系方式</h2>
 						<p><i class="fa fa-phone"></i>+86 151-7250-5966</p>
-						<p><i class="fa fa-envelope-o"></i> <a href="mailto:hello@company.co">yangdezhicy@168.com</a></p>
-						<p><i class="fa fa-globe"></i> <a href="#">company.co</a></p>
+						<p><i class="fa fa-envelope-o"></i> <a href="mailto:hello@company.co">yangdezhicy@163.com</a></p>
+						<p><i class="fa fa-qq"></i> <a href="#">782614807</a></p>
 					</div>
 				</div>
 			</div>
@@ -270,7 +267,7 @@
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
 				<div class="wow fadeInUp footer-copyright" data-wow-delay="1.2s">
-					<p>Copyright &copy; 2018 yangdehzi</p>
+					<p>Copyright &copy; 2018-yangdehzhi</p>
 				</div>
 				<ul class="social-icon">
 					<li><a href="#" class="fa fa-facebook"></a></li>
@@ -289,6 +286,5 @@
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
 <script src="js/02.js"></script>
-
 </body>
 </html>
