--- a/02.html
+++ b/02.html
@@ -39,7 +39,7 @@
 						<div class="home-thumb ">
 							<div class="section-title top">
 								<h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
-								<h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>YangDeZhi</strong>湖北-武汉</h1>
+								<h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>YangDeZhi</strong>  湖北-武汉</h1>
 								<p class="wow fadeInUp" data-wow-delay="0.9s">独学而无友 则孤陋而寡闻</p>
 								<a href="#about" class="a2 wow fadeInUp smoothScroll section-btn btn btn-success" data-wow-delay="1.4s">Get Started</a>
 							</div>
@@ -111,33 +111,33 @@
 				<!-- first -->
 				<div class="bg-yellow col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="0.8s">
-						<i class="fa fa-desktop"></i>
-						<h3>Interface Design</h3>
-						<p class="color-white">Phasellus vulputate tellus nec tortor varius elementum. Curabitur at pulvinar ante.Curabitur at pulvinar ante</p>
+						<i class="fa fa-credit-card"></i>
+						<h3>圣三一口语</h3>
+						<p class="color-white">获得圣三一口语二级证书</p>
 					</div>
 				</div>
 				<!-- second -->
 				<div class="bg-orange col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1s">
-						<i class="fa fa-paper-plane"></i>
-						<h3>Media Strategy</h3>
-						<p class="color-white">Curabitur at pulvinar ante. Duis dui urna, faucibus eget felis eu, iaculis congue sem.</p>
+						<i class="fa fa-credit-card"></i>
+						<h3>CET-4</h3>
+						<p class="color-white">2017年获得四级证书</p>
 					</div>
 				</div>
 				<!-- third -->
 				<div class="bg-dark col-md-3 col-sm-6">
 					<div class="wow fadeInUp color-white service-thumb" data-wow-delay="1.2s">
-						<i class="fa fa-table"></i>
-						<h3>Mobile App</h3>
-						<p class="color-white">Mauris convallis eros massa, vitae euismod arcu tempus ut. Quisque viverra iaculis.</p>
+						<i class="fa fa-building-o"></i>
+						<h3>淘宝装修</h3>
+						<p class="color-white">2017参加跨境电商比赛</p>
 					</div>
 				</div>
 				<!-- fourth -->
 				<div class="col-md-3 col-sm-6">
 					<div class="wow fadeInUp service-thumb" data-wow-delay="1.4s">
-						<i class="fa fa-html5"></i>
-						<h3>Coding</h3>
-						<p>Mauris convallis eros massa, vitae euismod arcu tempus ut. Quisque viverra iaculis.</p>
+						<i class="fa fa-globe"></i>
+						<h3>马拉松</h3>
+						<p>2017年参加武汉市马拉松</p>
 					</div>
 				</div>
 			</div>
@@ -228,7 +228,7 @@
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<i class="wow fadeInUp fa fa-star"></i>
 				<h2 class="wow fadeInUp">个人总结</h2>
-				<p class="wow fadeInUp">作为一个互联网从业者，不断的学习是必备的一项技能，我很喜欢前端工程师这个职业，通过系统性学习和自学
+				<p class="wow fadeInUp top">作为一个互联网从业者，不断的学习是必备的一项技能，我很喜欢前端工程师这个职业，通过系统性学习和自学
 					我更能认识到技术的日新月异和自我的不足，作为一个前端工程师，我们注重的不仅仅是技术的优秀，用户体验也是不可或缺的。
 				</p>
 			</div>
@@ -253,8 +253,8 @@
 					<div class="wow fadeInUp contact-info" data-wow-delay="0.8s">
 						<h2 class="color-white">我的联系方式</h2>
 						<p><i class="fa fa-phone"></i>+86 151-7250-5966</p>
-						<p><i class="fa fa-envelope-o"></i> <a href="mailto:hello@company.co">yangdezhicy@163.com</a></p>
-						<p><i class="fa fa-qq"></i> <a href="#">782614807</a></p>
+						<p><i class="fa fa-envelope-o"></i>yangdezhicy@163.com</p>
+						<p><i class="fa fa-qq"></i>782614807</p>
 					</div>
 				</div>
 			</div>
