--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta charset="UTF-8">
-		<title>resume web</title>
+		<title>YangDeZhi</title>
+		<link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 		<link rel="stylesheet" href="bootstrap/bootstrap.min.css">
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="stylesheet" href="css/app02.css">
+
 	</head>
 	<body>
 		<div id="particles-js"></div>
@@ -82,7 +84,7 @@
 							<p class="color-white">ES6 . HTML CSS JS . Ajax. Angular. Node. vue.</p>
 						</div>
 						<div class=" wow fadeInUp skills-thumb" data-wow-delay="1.6s">
-							<strong>HTML5 & CSS3</strong>
+							<strong>HTML5 & CSS3/strong>
 							<span class="color-white pull-right">80%</span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -90,12 +92,12 @@
 							<strong>JavaScript</strong>
 							<span class="color-white pull-right">60%</span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
 							</div>
 							<strong>JQuery</strong>
 							<span class="color-white pull-right">60%</span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
 							</div>
 						</div>
 					</div>
