--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<p class="color-white">ES6 . HTML CSS JS . Ajax. Angular. Node. vue.</p>
 						</div>
 						<div class=" wow fadeInUp skills-thumb" data-wow-delay="1.6s">
-							<strong>HTML5 & CSS3/strong>
+							<strong>HTML5 & CSS3</strong>
 							<span class="color-white pull-right">80%</span>
 							<div class="progress">
 								<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
