--- a/index.html
+++ b/index.html
@@ -157,14 +157,13 @@
 				<div class="color-white experience-thumb">
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
 						<h1>实习经验</h1>
-						<p class="color-white">EXPERIENCE</p>
 					</div>
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
 						<div class="media-object media-left">
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3 class="media-heading">滁州跨境电商产业园门户网<small>2017.06-2017.09</small></h3>
+							<h3>滁州跨境电商产业园门户网<small>2017.06-2017.09</small></h3>
 							<p class="color-white"><a href="http://www.czetrade.com">www.czetrade.com</a></p>
 						</div>
 					</div>
@@ -173,7 +172,7 @@
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3 class="media-heading">滁州外贸网<small>2017.10-2017.12</small></h3>
+							<h3>滁州外贸网<small>2017.10-2017.12</small></h3>
 							<p class="color-white"><a href="http://www.chuzhouexports.com">www.chuzhouexports.com</a></p>
 						</div>
 					</div>
@@ -191,7 +190,6 @@
 					<!-- first -->
 					<div class="wow fadeInUp section-title" data-wow-delay="0.8s">
 						<h1>教育背景</h1>
-						<p class="color-white">EDUCATION</p>
 					</div>
 					<!-- second -->
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
