--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						</div>
 						<div class="media-body">
 							<h3>东湖大数据<small>2017.06-2017.09</small></h3>
-							<p class="color-white"><a href="http://dhbigdata.cn" target="_blink">www.czetrade.com</a></p>
+							<p class="color-white"><a href="http://dhbigdata.cn" target="_blink">http://dhbigdata.cn</a></p>
 						</div>
 					</div>
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
@@ -173,7 +173,7 @@
 						</div>
 						<div class="media-body">
 							<h3>滁州跨境电商产业园门户网<small>2017.06-2017.09</small></h3>
-							<p class="color-white"><a href="http://www.czetrade.com" target="_blink">www.czetrade.com</a></p>
+							<p class="color-white"><a href="http://www.czetrade.com" target="_blink">http://www.czetrade.com</a></p>
 						</div>
 					</div>
 				</div>
