--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3>滁州跨境电商产业园门户网<small>2017.07-2017.12</small></h3>
-							<p class="color-white"><a href="http://www.czetrade.com" target="_blink">http://www.czetrade.com</a></p>
+							<h3>东湖大数据<small>2017.07-2017.12</small></h3>
+							<p class="color-white"><a href="http://dhbigdata.cn" target="_blink">http://dhbigdata.cn</a></p>
 						</div>
 					</div>
 					<div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
@@ -172,8 +172,8 @@
 							<i class="fa fa-laptop"></i>
 						</div>
 						<div class="media-body">
-							<h3>滁州外贸网<small>2018.01-2018.04</small></h3>
-							<p class="color-white"><a href="http://www.chuzhouexports.com" target="_blink">http://www.chuzhouexports.com</a></p>
+							<h3>滁州跨境电商产业园门户网<small>2018.01-2018.05</small></h3>
+							<p class="color-white"><a href="http://www.czetrade.com" target="_blink">http://www.czetrade.com</a></p>
 						</div>
 					</div>
 				</div>
