--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 						</div>
 						<div class="wow fadeInUp" data-wow-delay="0.8s">
 							<p>●熟练掌握HTML+CSS，熟悉普通网页制作等</p>
+							<p>●熟悉使用JavaScript、JQuery、Ajax</p>
 							<p>●熟悉了解css的预编译语言Less、ES6语法以及Bootstrap等前端框架</p>
-							<p>●能够利用Ajax完成前后端数据通信</p></p>
-							<p>●熟悉使用JavaScript、JQuery、Angular.js、Vue.js、node.js</p>
+							<p>●熟悉使用git分布式，gulp自动化工具</p>
+							<p>●了解Angular.js、Vue.js、node.js</p>
 							<p>●了解JAVA，MySQL</p>
 							<!-- <p>Quisque viverra iaculis aliquam. Etiam volutpat, justo non aliquam bibendum, sem nibh mollis erat, quis porta odio odio at velit.</p> -->
 						</div>
